--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,15 @@
 .product-item{
 	background: #dcf4fc;
 }
+.child-rows{
+	padding-left: 20px;
+	border-left: 1px solid
+#dfdfdf;
+background: #FFF;
+}
+.child-rows a.list-group-item{
+	border-left: 0px!important;
+}
 
 
 /*over wright*/
