--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+/*navbar*/
+.mr-auto, .mx-auto {
+    /* margin-right: auto!important; */
+    margin-top: 9px;
+    margin-bottom: -10px;
+}
+
+
 /*product css*/
 .product-item{
 	background: #dcf4fc;
